syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ngohoang211020/SimpleBank";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

